# Milestep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/backend/: Cargo.toml
crates/backend/migrations/: 001_init.sql  002_status_flags_and_indexes.sql  003_hardening.sql  004_tickets.sql  005_recurrence.sql  006_session_created_at.sql  007_invite_unique.sql  008_subtask_position_unique.sql  009_session_token_hash.sql
crates/backend/src/: access.rs  assemble.rs  attachments.rs  auth.rs  config.rs  convert.rs  db_tests.rs  error.rs  http_tests.rs  main.rs  middleware.rs  milestones.rs  queries.rs  recurrence.rs  router.rs  rows.rs  seed.rs  seed_files.rs  seed_tasks.rs  session.rs  startup.rs  subtasks.rs  tasks.rs  tests.rs  tickets.rs  workspace.rs  ws.rs
crates/frontend/: Cargo.toml  externalize-init.py  index.html
crates/frontend/src/: actions.rs  admin.rs  api.rs  attachments_ui.rs  auth_view.rs  cards.rs  i18n.rs  icons.rs  main.rs  modals.rs  realtime.rs  search.rs  settings.rs  shell.rs  styles.css  subtasks_ui.rs  task_comments.rs  task_detail.rs  task_edit.rs  tests.rs  theme.rs  ticket_detail.rs  views_board.rs  views_gantt.rs  views_timeline.rs
crates/frontend/src/shell/: chrome.rs  content.rs  helpers.rs  metadata.rs  mod.rs
crates/frontend/src/styles/: admin-overlays.css  app.css  base.css  fonts.css  subtasks.css  ux.css
crates/shared/: Cargo.toml
crates/shared/src/: enums.rs  lib.rs
deploy/nginx/: docker.conf  external-http3-ubuntu.conf  internal-vsphere-http3.conf
