[workspace]
members = [
  "crates/backend",
  "crates/frontend",
  "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["KoWoBau-Planner"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.12", features = ["v4", "serde"] }
