[package]
name = "kowobau-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = "0.6"
kowobau-shared = { path = "../shared" }
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "DragEvent",
  "Event",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "RequestCredentials",
] }
