[package]
name = "milestep-frontend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
futures-util = "0.3"
gloo-net = { version = "0.7", features = ["http", "websocket", "json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
milestep-shared = { path = "../shared" }
leptos = { version = "0.6.15", features = ["csr"] }
leptos_router = { version = "0.6.15", features = ["csr"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "DragEvent",
  "Element",
  "Event",
  "File",
  "FileList",
  "FormData",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "Location",
  "RequestCredentials",
  "Storage",
  "Window",
] }

[lints]
workspace = true
